CREATE TABLE GALERIAS(
    N_GALERIA VARCHAR(50) PRIMARY KEY,
    UBICACION VARCHAR(50)
);

CREATE TABLE AUTORES(
    ID_AUTOR NUMBER PRIMARY KEY,
    N_AUTOR VARCHAR(50) NOT NULL,
    ANO_NAC NUMBER NOT NULL, 
    ESTILO VARCHAR(50) NOT NULL,
    CHECK (ANO_NAC <= 2023)
);

CREATE TABLE OBRAS(
    ID_OBRA NUMBER PRIMARY KEY,
    N_OBRA VARCHAR(50) NOT NULL,
    ID_AUTOR NUMBER,
    TIPO VARCHAR(9) CHECK (TIPO IN ('Pictorica', 'Escultura')),
    PRECIO NUMBER NOT NULL,
    ALTURA NUMBER NOT NULL,
    PESO NUMBER NOT NULL,
    N_PIEZAS NUMBER NOT NULL,
    DESCRIPCION VARCHAR2(500) NOT NULL,
    GALERIA VARCHAR(50),
    FOREIGN KEY (ID_AUTOR) REFERENCES AUTORES(ID_AUTOR),
    FOREIGN KEY (GALERIA) REFERENCES GALERIAS (N_GALERIA)
);

CREATE TABLE PINTURA(
    ID_OBRA NUMBER,
    TECNICA VARCHAR(40) NOT NULL,
    FOREIGN KEY (ID_OBRA) REFERENCES OBRAS (ID_OBRA)
    ON DELETE CASCADE
);

CREATE TABLE ESCULTURA(
    ID_OBRA NUMBER,
    MATERIAL VARCHAR(40) NOT NULL,
    FOREIGN KEY (ID_OBRA) REFERENCES OBRAS (ID_OBRA)
    ON DELETE CASCADE
);
