@startuml Diagrama de clases
package es.etg.prog.galeria{
abstract class Obra {
  -id: int
  -tipo: String
  -nombre:String
  -autor:String
  -precio:double
  -altura:double
  -peso:double
  -numPiezas:int
  -descripcion:String
  +Obra (id: String, tipo: String, nombre: String, autor: String , precio: double, altura: double, peso: double, numPiezas: int, descripcion: String)
  +toString():String

}
class Galeria {
  +cargaInicialObras(): void
  +mostrarListaObras(): void
  +crear(): Obra
  +modificar(): Obra
  +crearGuardar(): void
  +visualizar(): void
  +calcularPrecio(): double
  +imprimirEtiqueta(): void
  +calcularPrecio(obra:Obra): double
}

class Pictorica {
  -tecnica: String
  -DESCUENTO double = 0.10
  +Pictorica (id:String, tipo:String, nombre:String, autor:String, precio:double, altura:double, peso:double, numPiezas:int, Tecnica:String, descripcion:String)
}

class Escultura {
  -material: String
  -DESCUENTO double = 0.20
  -SOBRECOSTE int = 50
  +Escultura (id:String, tipo:String, nombre:String, autor:String, precio:double, altura:double, peso:double, numPiezas:int, Material:String, descripcion:String)
}
}

Galeria o-- Obra
Obra <|--- Pictorica
Obra <|-- Escultura